--- a/package.json
+++ b/package.json
@@ -5,19 +5,23 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:server":"json-server server.json -p 3333 -w-d 500",
+    "dev:server": "json-server server.json -p 3333 -w-d 500",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src --ext .ts,.tsx"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.8",
     "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-radio-group": "^1.0.0",
     "eslint": "^8.25.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.6"
+    "react-hook-form": "^7.37.0",
+    "react-router-dom": "^6.4.2",
+    "styled-components": "^5.3.6",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.1.3",
