--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-radio-group": "^1.0.0",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "eslint": "^8.25.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-toastify": "^9.0.8",
     "styled-components": "^5.3.6",
